Refactor/style: delete& operation repo from dashboard list (#29)
